--- a/charts/roundcube/templates/roundcube-database-secret.yaml
+++ b/charts/roundcube/templates/roundcube-database-secret.yaml
@@ -9,15 +9,15 @@ metadata:
     component: {{ .Values.database.component }}
 type: Opaque
 stringData:
-  {{- if ( and .Values.dbUsername .Values.dbRootPassword .Values.dbDatabase ) }}
-  {{- if eq .Values.dbConnection "pgsql" }}
+  {{- if ( and .Values.dbUsername .Values.dbRootPassword .Values.dbName ) }}
+  {{- if eq .Values.dbType "pgsql" }}
   POSTGRES_PASSWORD: {{ .Values.dbRootPassword | default "database-root-password" }}
-  POSTGRES_DB: {{ .Values.dbDatabase | default "database-name" }}
+  POSTGRES_DB: {{ .Values.dbName | default "database-name" }}
   POSTGRES_USER: {{ .Values.dbUsername | default "database-user" }}
   {{- end }}
-  {{- if eq .Values.dbConnection "mysql" }}
+  {{- if eq .Values.dbType "mysql" }}
   MYSQL_ROOT_PASSWORD: {{ .Values.dbRootPassword | default "database-root-password" }}
-  MYSQL_DATABASE: {{ .Values.dbDatabase | default "database-name" }}
+  MYSQL_DATABASE: {{ .Values.dbName | default "database-name" }}
   MYSQL_PASSWORD: {{ .Values.dbPassword | default "database-password" }}
   MYSQL_USER: {{ .Values.dbUsername | default "database-user" }}
   {{- end }}
