--- a/charts/roundcube/templates/roundcube-ingress.yaml
+++ b/charts/roundcube/templates/roundcube-ingress.yaml
@@ -23,6 +23,8 @@ metadata:
     {{- include "roundcube.labels" . | nindent 4 }}
   {{- with .Values.roundcube.ingress.annotations }}
   annotations:
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      more_set_headers "X-Frame-Options: SAMEORIGIN";
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
