--- a/charts/osp/templates/osp-core-service.yaml
+++ b/charts/osp/templates/osp-core-service.yaml
@@ -15,7 +15,7 @@ spec:
     - name: server
       port: {{ .Values.osp_core.service.port }}
       protocol: TCP
-      targetPort: {{ .Values.osp_core.service.targetPort }}
+      targetPort: server
   selector:
     app: {{ template "osp.name" . }}
     release: {{ .Release.Name }}
