added rtmp configmap and debug ENV vars

--- a/charts/osp/templates/osp-rtmp-deployment.yaml
+++ b/charts/osp/templates/osp-rtmp-deployment.yaml
@@ -51,8 +51,10 @@ spec:
         envFrom:
         - configMapRef:
             name: "{{ template "osp.fullname" . }}-{{ .Values.osp_core.component }}"
+        - configMapRef:
+            name: "{{ template "osp.fullname" . }}-{{ .Values.osp_rtmp.component }}"
         - secretRef:
-            name: ""{{ template "osp.fullname" . }}-{{ .Values.osp_core.component }}-secret"
+            name: "{{ template "osp.fullname" . }}-{{ .Values.osp_core.component }}-secret"
         volumeMounts:
         - name: "{{ template "osp.fullname" . }}-{{ .Values.osp_core.component }}-{{ .Values.osp_core.volumes.data.name }}"
           mountPath: /var/www
