--- a/charts/osp/values.yaml
+++ b/charts/osp/values.yaml
@@ -254,6 +254,7 @@ osp_core:
     OSP_API_DOMAIN: streams.example.com
     OSP_ALLOWREGISTRATION: "True"
     OSP_REQUIREVERIFICATION: "False"
+    OSP_CORE_DEBUG: "False"
 
 ## OSP: RTMP
 ## templates/osp-rtmp-deployment.yaml
@@ -281,6 +282,8 @@ osp_rtmp:
   #   requests:
   #     memory: 250Mi
   #     cpu: 0.2
+  configData:
+    OSP_RTMP_DEBUG: "False"
   ## osp_rtmp service
   ## templates/osp-rtmp-service.yaml
   ##
