--- a/charts/roundcube/Chart.yaml
+++ b/charts/roundcube/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
-appVersion: v1.5-rc
+appVersion: v1.5.1
 description: Roundcube
 name: roundcube
-version: 0.1.2
+version: 0.1.3
 keywords:
   - roundcube
 home: https://roundcube.net/
