--- a/charts/koel/values.yaml
+++ b/charts/koel/values.yaml
@@ -24,11 +24,11 @@ components:
 images:
   koel:
     repository: registry.thejohnsons.site/jgesc/koel
-    tag: v5.1.12-1
+    tag: v5.1.12-2
     pullPolicy: IfNotPresent
   database:
     repository: mariadb
-    tag: 10.6.5
+    tag: 10.7.1-focal
     pullPolicy: IfNotPresent
 
 # Set the timezone of the koel server
