--- a/charts/koel/templates/koel-database-pvc.yaml
+++ b/charts/koel/templates/koel-database-pvc.yaml
@@ -11,7 +11,7 @@ spec:
   accessModes: [ "{{ .Values.koel.persistence.data.accessMode }}" ]
 {{- if .Values.database.persistence.data.storageClass }}
   storageClassName: "{{ .Values.database.persistence.data.storageClass }}"
-{{- else if and (not .Values.database.persistence.data.local_storage .Values.database.persistence.data.storageClass) }}
+{{- else if (and (not .Values.database.persistence.data.local_storage) (not .Values.database.persistence.data.storageClass)) }}
   storageClassName: {{ template "koel.fullname" . }}-{{ .Values.database.component }}-{{ .Values.database.persistence.data.name }}
 {{- else if .Values.database.persistence.data.local_storage }}
   storageClassName: "local-storage"
