--- a/charts/koel/templates/koel-cronjob.yaml
+++ b/charts/koel/templates/koel-cronjob.yaml
@@ -150,9 +150,11 @@ spec:
               value: "{{ .Values.publicHttpsPort }}"
     {{- end }}
 # Extra ENV Values supplied by user
+  {{- if .Values.extraEnv }}
   {{- range $key, $value := .Values.extraEnv }}
             - name: {{ $key }}
               value: "{{ $value }}"
+  {{- end }}
   {{- end }}
             {{- if .Values.koel.probes.liveness.enabled }}
             livenessProbe:
@@ -218,6 +220,7 @@ spec:
               subPath: {{ .Values.koel.persistence.data.subPath }}
             {{- end }}
             {{- end }}
+            {{- if .Values.koel.persistence.extraMounts }}
             {{-  range .Values.koel.persistence.extraMounts }}
             {{- if .mountPath }}
             - mountPath: {{ .mountPath }}
@@ -229,6 +232,8 @@ spec:
             {{- end }}
               name: {{ .name }}
             {{- end }}
+            {{- end }}
+            {{- if .Values.koel.ingress.tls }}
             {{- range .Values.koel.ingress.tls }}
             {{- if .secretName }}
             - name: {{ .secretName }}
@@ -242,6 +247,7 @@ spec:
               subPath: env
             {{- end }}
             {{- end }}
+            {{- end }}
             {{- if .Values.resources }}
             resources:
               {{- toYaml .Values.resources | nindent 12 }}
@@ -251,11 +257,13 @@ spec:
         - name: {{ template "koel.fullname" . }}-{{ .Values.koel.component }}-env
           configMap:
             name: {{ template "koel.fullname" . }}-{{ .Values.koel.component }}-env
+  {{- if .Values.koel.ingress.tls }}
   {{- range .Values.koel.ingress.tls }}
   {{- if .secretName }}
         - name: {{ .secretName }}
           secret:
             secretName: {{ .secretName }}
+  {{- end }}
   {{- end }}
   {{- end }}
   {{- if .Values.koel.persistence.music.enabled }}
@@ -285,6 +293,7 @@ spec:
             claimName: {{ template "koel.fullname" . }}-{{ .Values.koel.component }}-data
     {{- end }}
   {{- end }}
+  {{- if .Values.koel.persistence.extraMounts }}
   {{- range .Values.koel.persistence.extraMounts }}
     {{- if .claimName }}
         - name: {{ .name }}
@@ -294,6 +303,7 @@ spec:
         - name: {{ .name }}
           {{- toYaml .volume | nindent 8 }}
     {{- end }}
+  {{- end }}
   {{- end }}
   ##### VOLUMES END #####
     {{- if .Values.nodeSelector }}
