--- a/charts/koel/values.yaml
+++ b/charts/koel/values.yaml
@@ -174,6 +174,7 @@ koel:
   ## koel cronJob
   cronJob:
     schedule: "*/15 * * * *"
+    restartPolicy: Never
 
   ## koel service
   ## templates/koel-service.yaml
