--- a/charts/koel/templates/koel-cronjob.yaml
+++ b/charts/koel/templates/koel-cronjob.yaml
@@ -5,7 +5,7 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: {{ template "koel.fullname" . }}-{{ .Values.koel.component }}
+  name: {{ template "koel.fullname" . }}-{{ .Values.koel.component }}-scan
   namespace: {{ template "koel.namespace" . }}
   labels:
     {{- include "koel.labels" . | nindent 4 }}
@@ -60,8 +60,7 @@ spec:
               - bash
               - "-c"
               - |
-                sudo -Eu www-data php artisan koel:sync;
-                exit 0
+                sudo -Eu www-data php artisan koel:sync
               ports:
               - name: koel-http
                 protocol: TCP
