--- a/charts/osp/templates/osp-core-secret.yaml
+++ b/charts/osp/templates/osp-core-secret.yaml
@@ -10,7 +10,7 @@ metadata:
 type: Opaque
 stringData:
   {{- if .Values.osp_core.flask }}
-  FLASK_SECRET: {{ .Values.osp_core.flask.secret | default "osp-flask-secret" }}
-  FLASK_SALT: {{ .Values.osp_core.flask.salt | default "osp-flask-salt" }}
+  OSP_CORE_SECRETKEY: {{ .Values.osp_core.flask.secret | default "osp-flask-secret" }}
+  OSP_CORE_PASSWORD_SALT: {{ .Values.osp_core.flask.salt | default "osp-flask-salt" }}
   {{- end }}
 {{- end }}
