--- a/charts/koel/templates/koel-ingress.yaml
+++ b/charts/koel/templates/koel-ingress.yaml
@@ -10,10 +10,10 @@
 {{- end -}}
 {{- $svcPort := .svcPort -}}
 {{- $ingressPath := .Values.koel.ingress.path -}}
-{{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
-apiVersion: networking.k8s.io/v1beta1
+{{- if semverCompare ">=1.22-0" .Capabilities.KubeVersion.GitVersion -}}
+apiVersion: networking.k8s.io/v1
 {{- else -}}
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1beta1
 {{- end }}
 kind: Ingress
 metadata:
@@ -43,8 +43,12 @@ spec:
         paths:
           - path: {{ $ingressPath }}
             backend:
-              serviceName: {{ $fullName }}-{{ $component }}
-              servicePort: {{ $svcPort }}
+              service:
+                name: {{ $fullName }}-{{ $component }}
+                port:
+                  number: {{ $svcPort }}
+            path: /
+            pathType: ImplementationSpecific
   {{- end }}
 {{- end }}
 {{- end }}
