--- a/charts/roundcube/templates/roundcube-ingress.yaml
+++ b/charts/roundcube/templates/roundcube-ingress.yaml
@@ -10,10 +10,10 @@
 {{- end -}}
 {{- $svcPort := .svcPort -}}
 {{- $ingressPath := .Values.roundcube.ingress.path -}}
-{{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
-apiVersion: networking.k8s.io/v1beta1
+{{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1" }}
+apiVersion: networking.k8s.io/v1
 {{- else -}}
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1beta1
 {{- end }}
 kind: Ingress
 metadata:
@@ -32,9 +32,9 @@ spec:
   tls:
   {{- range .Values.roundcube.ingress.tls }}
     - hosts:
-      {{- range .hosts }}
+        {{- range .hosts }}
         - {{ . | quote }}
-      {{- end }}
+        {{- end }}
       secretName: {{ .secretName }}
   {{- end }}
 {{- end }}
@@ -43,10 +43,22 @@ spec:
     - host: {{ . | quote }}
       http:
         paths:
+        {{- if $.Capabilities.APIVersions.Has "networking.k8s.io/v1" }}
+          - pathType: Prefix
+            path: {{ $ingressPath }}
+        {{- else }}
           - path: {{ $ingressPath }}
+        {{- end }}
             backend:
+            {{- if $.Capabilities.APIVersions.Has "networking.k8s.io/v1" }}
+              service:
+                name: {{ $fullName }}-{{ $component }}
+                port:
+                  number: {{ $svcPort }}
+            {{- else }}
               serviceName: {{ $fullName }}-{{ $component }}
               servicePort: {{ $svcPort }}
+            {{- end }}
   {{- end }}
 {{- end }}
 {{- end }}
