--- a/charts/koel/templates/koel-ingress.yaml
+++ b/charts/koel/templates/koel-ingress.yaml
@@ -10,7 +10,7 @@
 {{- end -}}
 {{- $svcPort := .svcPort -}}
 {{- $ingressPath := .Values.koel.ingress.path -}}
-{{- if semverCompare ">=1.22-0" .Capabilities.KubeVersion.GitVersion -}}
+{{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1" }}
 apiVersion: networking.k8s.io/v1
 {{- else -}}
 apiVersion: networking.k8s.io/v1beta1
@@ -41,14 +41,22 @@ spec:
     - host: {{ . | quote }}
       http:
         paths:
+        {{- if $.Capabilities.APIVersions.Has "networking.k8s.io/v1" }}
+          - pathType: Prefix
+            path: {{ $ingressPath }}
+        {{- else }}
           - path: {{ $ingressPath }}
+        {{- end }}
             backend:
+            {{- if $.Capabilities.APIVersions.Has "networking.k8s.io/v1" }}
               service:
                 name: {{ $fullName }}-{{ $component }}
                 port:
                   number: {{ $svcPort }}
-            path: /
-            pathType: ImplementationSpecific
+            {{- else }}
+              serviceName: {{ $fullName }}-{{ $component }}
+              servicePort: {{ $svcPort }}
+            {{- end }}
   {{- end }}
 {{- end }}
 {{- end }}
