--- a/charts/emby/templates/ingress.yaml
+++ b/charts/emby/templates/ingress.yaml
@@ -7,10 +7,10 @@
 {{- end -}}
 {{- $svcPort := .svcPort -}}
 {{- $ingressPath := .Values.ingress.path -}}
-{{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
-apiVersion: networking.k8s.io/v1beta1
+{{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1" }}
+apiVersion: networking.k8s.io/v1
 {{- else -}}
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1beta1
 {{- end }}
 kind: Ingress
 metadata:
@@ -37,9 +37,21 @@ spec:
     - host: {{ . | quote }}
       http:
         paths:
+        {{- if $.Capabilities.APIVersions.Has "networking.k8s.io/v1" }}
+          - pathType: Prefix
+            path: {{ $ingressPath }}
+        {{- else }}
           - path: {{ $ingressPath }}
+        {{- end }}
             backend:
+            {{- if $.Capabilities.APIVersions.Has "networking.k8s.io/v1" }}
+              service:
+                name: {{ $fullName }}-tcp
+                port:
+                  number: {{ $svcPort }}
+            {{- else }}
               serviceName: {{ $fullName }}-tcp
               servicePort: {{ $svcPort }}
+            {{- end }}
   {{- end }}
 {{- end }}
