--- a/charts/roundcube/values.yaml
+++ b/charts/roundcube/values.yaml
@@ -28,7 +28,7 @@ images:
     pullPolicy: IfNotPresent
   database:
     repository: mariadb
-    tag: 10.7.8
+    tag: 11.4.5-noble
     pullPolicy: IfNotPresent
 
 # Set the timezone of the roundcube server
